--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -53,9 +53,37 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow4">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn8"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn9"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn10"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn8" horizontalalign="center" padding="2em unset">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid5">
+                                <wm-gridrow height="100%" name="gridrow6_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn13_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-list"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn14_1" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Manage Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn9" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid6">
+                                <wm-gridrow height="100%" name="gridrow7_1">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn15_1" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-report"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn16_1" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Manage Reports" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn10" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
