--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -19,14 +19,14 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn3" horizontalalign="center">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn3" horizontalalign="center" padding="2em unset">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
                             <wm-layoutgrid height="100%" name="layoutgrid2">
                                 <wm-gridrow height="100%" name="gridrow3">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn6">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn6" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-book-open"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn7">
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn7" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Open Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -34,14 +34,14 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn4" horizontalalign="center">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn4" horizontalalign="center" padding="2em unset">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
                             <wm-layoutgrid height="100%" name="layoutgrid3">
                                 <wm-gridrow height="100%" name="gridrow4">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn8">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn8" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-book-binder"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn9">
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn9" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Closed Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -49,14 +49,14 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn5" horizontalalign="center">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn5" horizontalalign="center" padding="2em unset">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
                             <wm-layoutgrid height="100%" name="layoutgrid4">
                                 <wm-gridrow height="100%" name="gridrow5">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn10">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn10" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-attach-money"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn11">
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn11" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="My Fees" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
@@ -66,9 +66,70 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow6">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn12"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn13"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn14"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn12" horizontalalign="center" padding="2em unset">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid5">
+                                <wm-gridrow height="100%" name="gridrow7">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn15" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-message"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn16" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Messages" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid7">
+                                <wm-gridrow height="100%" name="gridrow9">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn19" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-search"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn20" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Find Form" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn14" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid6">
+                                <wm-gridrow height="100%" name="gridrow8">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn17" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-building"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn18" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="My Projects" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow10">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" horizontalalign="center" padding="1em unset">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                            <wm-layoutgrid height="100%" name="layoutgrid8">
+                                <wm-gridrow height="100%" name="gridrow11">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn24" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-settings"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="2em unset unset unset" horizontalalign="center" name="gridcolumn25" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="My Settings" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn22" padding="1em unset" horizontalalign="center"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23" padding="1em unset" horizontalalign="center"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
